objects/TEMarketing__Assignment_Group_Queues__c.object
<CustomObject>
    <fields>
        <fullName>TEMarketing__Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                    <default>true</default>
                    <label>True</label>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TEMarketing__Assignment_Group_Name__c</fullName>
        <label>Assignment Group Name</label>
        <referenceTo>TEMarketing__Assignment_Group_Name__c</referenceTo>
        <relationshipName>Assignment_Group_Queues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TEMarketing__QueueId__c</fullName>
        <description>Auto-populated via trigger to lookup Queue Id by Queue Name. Internal Apex usage.</description>
        <label>QueueId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TEMarketing__Valid_Queue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Valid Queue</label>
        <type>Checkbox</type>
    </fields>
    <label>AG-Queue</label>
    <nameField>
        <label>Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AG-Queues</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>TEMarketing__Queue_Name_is_Unique</fullName>
        <active>false</active>
        <errorConditionFormula>if( ISCHANGED(  Name ), 
       IF( len(VLOOKUP(  $ObjectType.TEMarketing__Assignment_Group_Queues__c.Fields.Name,    $ObjectType.TEMarketing__Assignment_Group_Queues__c.Fields.Name , Name ))&gt;0,
               True,
               False),
       False
)</errorConditionFormula>
        <errorMessage>Queue already belongs to an Assignment Group.  Please remove from Assignment Group or choose another Queue</errorMessage>
    </validationRules>
</CustomObject>